--- a/[69]250611/templates/projects.html
+++ b/[69]250611/templates/projects.html
@@ -9,6 +9,6 @@
         <li>기업 내 외부 문서를 이용한 RAG와 Langchain LLM을 연동한 기업 QA 시스템</li>
     </ul>
     <p>
-        <a href = "/">홈으로</a> | <a href = "/about">소개</a>
+        <a href = "/">🏠 홈으로</a> | <a href = "/about">👤 소개</a> | <a href = "/contact">📞 연락하기</a>
     </p>
 {% endblock %}
