--- a/[69]250611/templates/about.html
+++ b/[69]250611/templates/about.html
@@ -5,6 +5,6 @@
     <h1> 소개 페이지</h1>
     <p> 저는 인공지능 개발자이며 Backend를 배우고 있어요</p>
     <p>
-        <a href = "/">홈으로</a> | <a href = "/projects">프로젝트</a>
+        <a href = "/">🏠 홈으로</a> | <a href = "/projects">📂 프로젝트</a> | <a href = "/contact">📞 연락하기</a>
     </p>
 {% endblock %}
