--- a/[69]250611/templates/contact.html
+++ b/[69]250611/templates/contact.html
@@ -8,9 +8,9 @@
     {% endif %}
     <form method="post" action ="/contact">
         <p><input type="text" name="name" placeholder="이름" required></p>
-        <p><input type="email" name="email" placeholder="dlapdlf" required></p>
-        <p><input name="message" placeholder="메시지 내용" row="5" required></p>
-        <p><button type="submit">보내기</p>
+        <p><input type="email" name="email" placeholder="이메일" required></p>
+        <p><textarea name="message" placeholder="메시지 내용" row="5" required></textarea></p>
+        <p><button type="submit">보내기</button></p>
     </form>
-    <p><a href = '/'>홈으로</a></p>
+    <p> <a href = "/"> 🏠 홈으로</a> | <a href = "/about">👤 소개</a> | <a href = "/projects">📂 프로젝트</a></p>
 {% endblock %}
