--- a/[69]250611/templates/index.html
+++ b/[69]250611/templates/index.html
@@ -13,7 +13,7 @@
         <img src="{{ url_for('static', filename='my.png')}}" alt="프로필 이미지"> 
         <p><a href="https://github.com/Jmlee0507/LLM.git">🔗 github 바로가기</a></p>
         <p>
-        <a href = "/about">소개</a> | <a href = "/projects">프로젝트</a>
+        <a href = "/about">👤 소개</a> | <a href = "/projects">📂 프로젝트</a> | <a href = "/contact">📞 연락하기</a>
         </p>
     </div>
     
