--- a/[73]250617/templates/board/index.html
+++ b/[73]250617/templates/board/index.html
@@ -2,11 +2,13 @@
     <ul>
         {% for question in questions %}
             <!-- <li><a href = '/board/{{ question.id }}'> -->
-            <li><a href = '{ % url "question_detail" question.id %}'>
+            <li><a href = '{% url "board:question_detail" question.id %}'>
                 {{ question.subject }} - {{ question.created_at }}</a>
             </li>
         {% endfor %}
     </ul>
 {% else %}
     <p>질문이 없습니다.</p>
+{% endif %}
+<button><a href="{% url 'board:question_create' %}">질문 작성</a></button>
 {% endif %}
