--- a/[73]250617/templates/board/create_question.html
+++ b/[73]250617/templates/board/create_question.html
@@ -5,9 +5,9 @@
     <h1>질문 작성</h1>
     <form method = "post" action="{% url 'board:create_question' %}">
         {% csrf_token %}
-        <input type="text" name="subject" required>
-        <textarea name="content" rows="5" required></textarea>
-        <input type="submit" value="질문 작성">
+        <input type="text" name="subject" placeholder="제목" required>
+        <textarea name="content" rows="5" placeholder="내용"></textarea>
+        <input type="submit" value="질문 저장">
     </form>
 </div>
 {% endblock %}
