--- a/[75]250619/blog/templates/blog/post_list.html
+++ b/[75]250619/blog/templates/blog/post_list.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
 </head>
 <body>
     <h1>Blog Posts</h1>
-    {% if user_id}
+    {% if user_id %}
         <p>Welcome, {{ username }}!</p>
         <a href="{% url 'post_create' %}">Create New Post</a>
         <form method="post" action="{% url 'logout' %}">
