--- a/[75]250619/loginout/templates/loginout/login.html
+++ b/[75]250619/loginout/templates/loginout/login.html
@@ -10,7 +10,7 @@
     <form method="post">
         {% csrf_token %}
         <p><input type="text" placeholder="사용자 이름" id="username" name="username" required></p>
-        <p><input type="passowrd" placeholder="비밀번호" id="password" name="password" required></p>
+        <p><input type="password" placeholder="비밀번호" id="password" name="password" required></p>
         <button type="submit">로그인</button>
     </form>
     {% if messages %}
@@ -20,6 +20,6 @@
         {% endfor %}
     </ul>
     {% endif %}
-    <!-- 액션이 없으면 현재 주소로 가는 것 -->
+    
 </body>
 </html>
